added two basic problems.

--- a/package.json
+++ b/package.json
@@ -6,25 +6,14 @@
         "crypto-adventure": "bin/cmd.js"
     },
     "dependencies": {
-        "x256": "~0.0.1",
-        "optimist": "~0.5.2",
-        "through": "~2.3.4",
-        "tuple-stream": "~0.0.2",
-        "terminal-menu": "~0.0.0",
-        "split": "~0.2.5",
-        "duplexer": "~0.1.1",
-        "concat-stream": "~1.0.0",
-        "hyperquest": "~0.1.6",
-        "request": "~2.21.0",
-        "chunky": "~0.0.0",
-        "clone": "~0.1.9",
-        "wordwrap": "~0.0.2",
-        "tar": "~0.1.17",
-        "websocket-stream": "~0.2.0",
-        "trumpet": "~1.6.2",
-        "ws": "~0.4.25",
-        "browserify": "~2.35.4",
-        "mkdirp": "~0.3.5"
+        "workshopper": "0.4.1",
+        "utf8-bytes": "x",
+        "rimraf": "~2.2.2",
+        "after": "~0.8.1",
+        "echomunge": "~0.2.0",
+        "readable-stream": "~1.0.15",
+        "through2-map": "~1.1.0",
+        "through2": "~0.2.1"
     },
     "repository": {
         "type": "git",
